3 files modified, 3 added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,10 +16,10 @@
           <div class="col-md-3">
             <div class="box box1">
               <div class="details">
-                <h3>1213</h3>
-                <h4>CLICKS</h4>
+                <h3>Dólar</h3>
+                <h4>R$ 5.239</h4>
               </div>
-              <div id="spark1"></div>
+              <app-spark [data]="dataDolarQuotation"></app-spark>
             </div>
           </div>
           <div class="col-md-3">
