--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,37 +15,24 @@
         <div class="row sparkboxes mt-4">
           <div class="col-md-3">
             <div class="box box1">
-              <div class="details">
-                <h3>Dólar</h3>
-                <h4>R$ 5.239</h4>
-              </div>
-              <app-spark [data]="dataDolarQuotation"></app-spark>
+              <app-spark 
+              name="Dólar"
+              [value]="dolarQuotationValue"
+              ></app-spark>
             </div>
           </div>
           <div class="col-md-3">
             <div class="box box2">
-              <div class="details">
-                <h3>422</h3>
-                <h4>VIEWS</h4>
-              </div>
-              <div id="spark2"></div>
+              <app-spark ></app-spark>
             </div>
           </div>
           <div class="col-md-3">
             <div class="box box3">
-              <div class="details">
-                <h3>311</h3>
-                <h4>LEADS</h4>
-              </div>
               <div id="spark3"></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="box box4">
-              <div class="details">
-                <h3>22</h3>
-                <h4>SALES</h4>
-              </div>
               <div id="spark4"></div>
             </div>
           </div>
