--- a/src/app/spark/spark.component.html
+++ b/src/app/spark/spark.component.html
@@ -1,3 +1,7 @@
+<div class="details">
+  <h3>{{ name }}</h3>
+  <h4>R$ {{ value.toFixed(3) }}</h4>
+</div>
 <div id="spark1">
   <apx-chart
     [series]="chartOptions.series"
