4 files modified, 1 added, 1 deleted

--- a/src/app/barchart/barchart.component.html
+++ b/src/app/barchart/barchart.component.html
@@ -9,5 +9,6 @@
     [xaxis]="chartOptions.xaxis"
     [legend]="chartOptions.legend"
     [fill]="chartOptions.fill"
+    [yaxis]="chartOptions.yaxis"
   ></apx-chart>
 </div>
