--- a/src/app/spark/spark.component.html
+++ b/src/app/spark/spark.component.html
@@ -1,6 +1,6 @@
 <div class="details">
   <h3>{{ name }}</h3>
-  <h4>R$ {{ value.toFixed(3) }}</h4>
+  <h4>R$ {{ value }}</h4>
 </div>
 <div id="spark1">
   <apx-chart
