--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,11 +1,6 @@
-<div class="col-md-3">
-  <div class="box">
-    <div class="details">
-      <h3>{{ name }}</h3>
-      <h4>R$ {{ value }}</h4>
-      <div id="spark1">
-       
-      </div>
-    </div>
-  </div>
+<div class="details">
+  <h5>{{ name }}</h5>
+</div>
+<div class="value">
+  <h6>R$ {{value}}</h6>
 </div>
