--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,7 +1,6 @@
 .details {
-  position: absolute;
   color: #fff;
-  transform: scale(0.7) translate(-22px, 20px);
+  text-align: center;
 }
 
 h1,
@@ -13,3 +12,30 @@ h6,
 strong {
   font-weight: 600;
 }
+
+.card {
+  background-color: #2b2d3e;
+}
+
+.card {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-shadow: 0 1px 1px 1px #666;
+  box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.08);
+  border-radius: 5px;
+}
+
+.value{
+  margin-top: 10px;
+  color: #fff;
+  text-align: center;
+}
+
+.shadow {
+  box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.08);
+}
+
+.box2 {
+  width: 100%;
+}
+
