--- a/src/app/radial-bar-chart/radial-bar-chart.component.html
+++ b/src/app/radial-bar-chart/radial-bar-chart.component.html
@@ -7,5 +7,8 @@
     [labels]="chartOptions.labels"
     [legend]="chartOptions.legend"
     [stroke]="chartOptions.stroke"
+    [fill]="chartOptions.fill"
+    [colors]="chartOptions.colors"
+    [tooltip]="chartOptions.tooltip"
   ></apx-chart>
 </div>
