8 files modified, 3 added

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,6 +2,6 @@
   <h6>{{ name }}</h6>
   <fa-icon [icon]="icon"></fa-icon>
 </div>
-<div class="value" data-toggle="tooltip" data-placement="top" title="R$ {{value}}">
-  <h6>R$ {{round(value)}}</h6>
+<div class="value" data-toggle="tooltip" data-placement="top" title="{{value}}">
+  <h6>{{round(value)}}</h6>
 </div>
