--- a/src/app/charts-negotiations/charts-negotiations.component.html
+++ b/src/app/charts-negotiations/charts-negotiations.component.html
@@ -3,12 +3,11 @@
     [title]="chartOptions.titles"
     [series]="chartOptions.series"
     [chart]="chartOptions.chart"
-    [plotOptions]="chartOptions.plotOptions"
     [labels]="chartOptions.labels"
     [legend]="chartOptions.legend"
-    [stroke]="chartOptions.stroke"
-    [fill]="chartOptions.fill"
     [colors]="chartOptions.colors"
+    [responsive]="chartOptions.responsive"
     [tooltip]="chartOptions.tooltip"
+    [plotOptions]="chartOptions.plotOptions"
   ></apx-chart>
 </div>
