--- a/src/app/filter-modal/filter-modal.component.html
+++ b/src/app/filter-modal/filter-modal.component.html
@@ -11,7 +11,7 @@
         class="po-md-7"
         name="crop"
         p-icon="po-icon-search"
-        p-label="Safra/Negócios*"
+        p-label="Safra/Negócios"
         (p-change)="changeCrop()"
         [p-options]="comboCropService"
         formControlName="crop"
@@ -22,7 +22,7 @@
         class="po-md-7"
         name="culture"
         p-icon="po-icon-search"
-        p-label="Cultura*"
+        p-label="Cultura"
         (p-change)="changeCulture()"
         [p-options]="comboCultureService"
         formControlName="culture"
@@ -33,7 +33,7 @@
         class="po-md-7"
         name="ruralProperty"
         p-icon="po-icon-search"
-        p-label="Safra/Negócios*"
+        p-label="Safra/Negócios"
         (p-change)="changeRuralProperty()"
         [p-options]="comboRuralPropertyService"
         formControlName="ruralProperty"
