--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -482,6 +482,9 @@
             ></app-card>
           </div>
         </div>
+
+
+        <app-filter-modal (response)="reciverFilter($event)"></app-filter-modal>
       </div>
     </div>
   </div>
