--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -110,7 +110,7 @@
               <ul class="col-md-12">
                 <div class="container-icon-title">
                   <h4>Romaneios</h4>
-                  <fa-icon [icon]="iconFilter"></fa-icon>
+                  <fa-icon [icon]="iconFilter" (click)="openModal()"></fa-icon>
                 </div>
                 <li class="small-card mt-4">
                   <div class="container-icon">
